<resources>
    <string name="app_name" translatable="false">App Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="finish" translatable="false">Finish</string>
    <!-- Intro Strings -->
    <string name="intro_title_one" translatable="false">Welcome</string>
    <string name="intro_sub_one" translatable="false">Access the latest applications with the App Store</string>
    <string name="intro_title_two" translatable="false">Comments</string>
    <string name="intro_sub_two" translatable="false">Check other users comments about the app before download apps</string>
    <string name="intro_title_three" translatable="false">Developing</string>
    <string name="intro_sub_three" translatable="false">Ideas that you think make the App Store enjoyable will be implemented</string>
    <!-- Dialog Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="network_error">Check your network connection</string>
    <string name="network_pos">Network Settings</string>
    <string name="request_failed">An problem occurred . Try again</string>
    <string name="request_failed_pos">Retry</string>
    <string name="request_failed_neg">Cancel</string>
    <!-- Account Strings -->
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_repeat">Password repeat</string>
    <string name="sign_up_alt"><u>Sign up</u></string>
    <string name="sign_in_alt"><u>Sign in</u></string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_successful">Successfully Signed out</string>
    <string name="welcome">Welcome!</string>
    <string name="password_error">Password must be 8 characters at least</string>
    <string name="email_error">Entered email not valid</string>
    <string name="password_error_repeat">Password and repeat is not same</string>
    <string name="username_error">Entered Username not correct . at least 2 characters</string>
    <!-- App Strings -->
    <string name="by">by</string>
    <string name="not_found">Not found any app in this category . check other category</string>
    <string name="all_update">No update found . Your apps is up to date !</string>
    <string name="install">Install</string>
    <string name="update">Update</string>
    <string name="open">Open</string>
    <string name="uninstall">Uninstall</string>
    <string name="downloading">Downloading</string>
    <string name="in_queue">In queue</string>
    <!-- Search Strings -->
    <string name="search">Search</string>
    <string name="not_found_search">Your search didn\'t have any result</string>
    <!-- Settings Strings -->
    <string name="language">Language</string>
    <string name="day_night">Day/Night</string>
    <string name="update_checking">Update checking</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="dark">Dark mode</string>
    <string name="light">Light mode</string>
    <string name="detail">Detail...</string>
    <string name="more">See All</string>
    <string name="about_app">About app</string>
    <string name="user_comments">User Comments</string>
    <string name="no_comments">No Comment submitted !</string>
    <!-- Comments Strings -->
    <string name="delete">Delete</string>
    <string name="sure_delete">Are you sure about this ?</string>
    <string name="submit">Submit Comment</string>
    <string name="rate_comment_hint">Your comment (if you leave this empty your rate will be submit)</string>
    <string name="add_comment">Add Comment</string>
    <string name="download_finished">Download finished</string>
    <string name="downloaded"> downloaded successfully</string>

</resources>