<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        android:id="@+id/guide_start">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/guide_end">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp40"
        android:id="@+id/guide_top">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"
        android:id="@+id/guide_bottom">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/bottom_sheet_toggle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        android:layout_marginTop="@dimen/dp12">
    </androidx.appcompat.widget.AppCompatTextView>


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide_top"
        app:layout_constraintStart_toEndOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        android:layout_marginTop="@dimen/dp8"
        style="@style/edt_style"
        android:drawableEnd="@drawable/ic_account"
        android:hint="@string/username"
        android:id="@+id/txt_user"
        android:ellipsize="end">
    </com.google.android.material.textfield.TextInputEditText>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_user"
        app:layout_constraintStart_toEndOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        android:layout_marginTop="@dimen/dp16"
        style="@style/edt_style"
        android:drawableEnd="@drawable/ic_mail"
        android:hint="@string/email"
        android:id="@+id/txt_mail">
    </androidx.appcompat.widget.AppCompatEditText>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_mail"
        app:layout_constraintStart_toEndOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        android:layout_marginTop="@dimen/dp16"
        style="@style/edt_style"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/password"
        android:id="@+id/txt_password">
    </androidx.appcompat.widget.AppCompatEditText>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_password"
        app:layout_constraintStart_toEndOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        android:layout_marginTop="@dimen/dp16"
        style="@style/edt_style"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/password_repeat"
        android:id="@+id/txt_retype_password">
    </androidx.appcompat.widget.AppCompatEditText>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_retype_password"
        app:layout_constraintStart_toEndOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/dp56"
        android:layout_marginBottom="@dimen/dp24"
        style="@style/btn_style"
        android:text="Login"
        android:textSize="18sp"
        android:id="@+id/btn">
    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>