<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SettingsActivity"
    android:background="@color/colorPrimary">


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"
        android:id="@+id/guide_start">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"
        android:id="@+id/guide_end">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp40"
        android:id="@+id/guide_top">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"
        android:id="@+id/guide_bottom">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/dp8"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/colorOnPrimary"
        android:id="@+id/img_back">
    </androidx.appcompat.widget.AppCompatImageView>


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide_top"
        app:layout_constraintStart_toEndOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        app:cardBackgroundColor="@color/colorSecondary"
        app:cardElevation="@dimen/dp16"
        app:cardCornerRadius="@dimen/dp16">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp12"
            android:paddingEnd="@dimen/dp12">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/dp16"
                android:id="@+id/language">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/text_size_small_normal"
                    android:drawableStart="@drawable/ic_language"
                    android:drawableTint="@color/colorOnPrimary"
                    android:drawablePadding="@dimen/dp8"
                    android:text="@string/language">
                </androidx.appcompat.widget.AppCompatTextView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp72"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/md_white_1000"
                    android:background="@drawable/btn_selector"
                    android:padding="@dimen/dp4"
                    android:id="@+id/txt_language">
                </androidx.appcompat.widget.AppCompatTextView>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                app:layout_constraintTop_toBottomOf="@id/language"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/colorPrimary"
                android:id="@+id/divider_one">
            </androidx.appcompat.widget.AppCompatTextView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider_one"
                android:layout_marginTop="@dimen/dp16"
                android:id="@+id/theme">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/text_size_small_normal"
                    android:drawableStart="@drawable/ic_day_night"
                    android:drawableTint="@color/colorOnPrimary"
                    android:drawablePadding="@dimen/dp8"
                    android:text="@string/day_night">
                </androidx.appcompat.widget.AppCompatTextView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp72"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/md_white_1000"
                    android:background="@drawable/btn_selector"
                    android:padding="@dimen/dp4"
                    android:id="@+id/txt_day_night">
                </androidx.appcompat.widget.AppCompatTextView>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                app:layout_constraintTop_toBottomOf="@id/theme"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/colorPrimary"
                android:id="@+id/divider_two">
            </androidx.appcompat.widget.AppCompatTextView>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider_two"
                android:layout_marginTop="@dimen/dp16"
                android:id="@+id/update">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/text_size_small_normal"
                    android:drawableStart="@drawable/ic_update"
                    android:drawableTint="@color/colorOnPrimary"
                    android:drawablePadding="@dimen/dp8"
                    android:text="@string/update_checking">
                </androidx.appcompat.widget.AppCompatTextView>


                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:thumbTint="@color/colorOnPrimary"
                    app:trackTint="@color/colorPrimary"
                    android:id="@+id/switch_s">
                </androidx.appcompat.widget.SwitchCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                app:layout_constraintTop_toBottomOf="@id/update"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/colorPrimary"
                android:id="@+id/divider_three">
            </androidx.appcompat.widget.AppCompatTextView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider_three"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16"
                android:id="@+id/bug">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/text_size_small_normal"
                    android:drawableStart="@drawable/ic_bug"
                    android:drawableTint="@color/colorOnPrimary"
                    android:drawablePadding="@dimen/dp8"
                    android:text="@string/report_a_bug">
                </androidx.appcompat.widget.AppCompatTextView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guide_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dp8"
        android:textSize="@dimen/text_size_small"
        android:text="Version : 1.0"
        android:id="@+id/txt_ver">
    </androidx.appcompat.widget.AppCompatTextView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>